Fixed flex wrap on index page

--- a/app/assets/stylesheets/video_index.scss
+++ b/app/assets/stylesheets/video_index.scss
@@ -1,5 +1,6 @@
 .video-index {
   display: flex;
+  flex-wrap: wrap;
   width: calc(100vw - 90px);
   background-color: rgb(238, 238, 238);
   padding: 20px 20px;
@@ -9,9 +10,10 @@
 
 .video {
   display: flex;
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
   flex-direction: column;
-  margin: 20px;
+  margin:  10px 20px;
+  height: 300px;
 }
 
 img {
